fixing about badge on mobile.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -471,7 +471,7 @@ and (max-width : 667px) {
 		}
 
 		.badge-about{
-			top:220px !important;
+			top: 250px !important; 
 		}
 
 		.badge-home{
@@ -760,7 +760,7 @@ and (max-width : 1024px) {
 		}
 
 		.badge-about{
-			top:350px !important;
+			top: 250px !important; 
 		}
 
 		.badge-home{
